Unifie le style des zones de texte des consignes

--- a/index.html
+++ b/index.html
@@ -1230,12 +1230,11 @@
     .practice-editor__label{ font-size:.75rem; text-transform:uppercase; letter-spacing:.08em; color:#475569; font-weight:600; }
     .practice-editor__value{ font-size:.9rem; color:#1f2937; }
     .practice-editor__input,
-    .practice-editor__select,
-    .practice-editor__textarea{ width:100%; border:1px solid #E2E8F0; border-radius:.75rem; padding:.55rem .7rem; font-size:.9rem; color:#334155; }
-    .practice-editor__textarea{ min-height:96px; resize:vertical; }
+    .practice-editor__select{ width:100%; border:1px solid #E2E8F0; border-radius:.75rem; padding:.55rem .7rem; font-size:.9rem; color:#334155; }
+    .consigne-editor__textarea{ width:100%; border:1px solid #E2E8F0; border-radius:.75rem; padding:.6rem .75rem; font-size:.85rem; line-height:1.5; color:#334155; min-height:10rem; resize:vertical; }
     .practice-editor__input:focus-visible,
     .practice-editor__select:focus-visible,
-    .practice-editor__textarea:focus-visible{ outline:3px solid var(--accent-200); outline-offset:1px; border-color:var(--accent-400); }
+    .consigne-editor__textarea:focus-visible{ outline:3px solid var(--accent-200); outline-offset:1px; border-color:var(--accent-400); }
     .practice-editor__actions{ position:sticky; bottom:0; display:flex; justify-content:flex-end; gap:.5rem; padding:1rem 0 0; margin-top:1.25rem; border-top:1px solid #e2e8f0; background:linear-gradient(180deg,#ffffff 0%,#f8fafc 100%); }
 
     .history-panel{ display:flex; flex-direction:column; gap:1rem; }
