--- a/index.html
+++ b/index.html
@@ -1429,6 +1429,7 @@
   <script src="modes.js"></script>
   <script src="goals.js"></script>
   <script src="autosave.js"></script>
+  <script type="module" src="./editor-checkboxes.js"></script>
   <script src="app.js"></script>
   <script>
     (function initApp() {
