--- a/index.html
+++ b/index.html
@@ -1421,6 +1421,7 @@
   <script src="modes.js"></script>
   <script src="goals.js"></script>
   <script src="autosave.js"></script>
+  <script src="./editor-checkboxes.js"></script>
   <script src="./checklist-editor.js"></script>
   <script src="app.js"></script>
   <script>
