Improve checklist editor checkbox handling

--- a/index.html
+++ b/index.html
@@ -1441,6 +1441,7 @@
   <script src="modes.js"></script>
   <script src="goals.js"></script>
   <script src="autosave.js"></script>
+  <script src="./text-editor-checkboxes.js"></script>
   <script src="./editor-checkboxes.js"></script>
   <script src="./checklist-editor.js"></script>
   <script src="app.js"></script>
