Normalize checklist checkbox wrappers and guard editor listeners

--- a/index.html
+++ b/index.html
@@ -1300,6 +1300,13 @@
       white-space:pre-wrap;
       word-break:break-word;
     }
+    #rt-editor,
+    #rt-editor *,
+    .rt-editor,
+    .rt-editor *{
+      user-select:text !important;
+      pointer-events:auto !important;
+    }
     .consigne-rich-text__content p{ margin:.35rem 0; }
     .editor ul,
     #rt-editor ul,
