Fix checklist exit when pressing Enter on empty task

--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,7 @@
   <script src="autosave.js"></script>
   <script src="./text-editor-checkboxes.js"></script>
   <script src="./editor-checkboxes.js"></script>
+  <script src="./checklist-fix.js"></script>
   <script src="./checklist-editor.js"></script>
   <script src="app.js"></script>
   <script>
