--- a/index.html
+++ b/index.html
@@ -1514,6 +1514,7 @@
   <script src="./editor-checkboxes.js"></script>
   <script src="./checklist-fix.js"></script>
   <script src="./checklist-editor.js"></script>
+  <script src="bilan.js"></script>
   <script src="app.js"></script>
   <script>
     (function initApp() {
