--- a/index.html
+++ b/index.html
@@ -415,9 +415,17 @@
       gap:.35rem;
     }
     .daily-summary__title {
+      display:flex;
+      align-items:center;
+      gap:.6rem;
       font-size:1.25rem;
       font-weight:700;
       color:#0f172a;
+    }
+    .daily-summary__icon {
+      font-size:1.6rem;
+      line-height:1;
+      flex-shrink:0;
     }
     .daily-summary__meta {
       font-size:.95rem;
