Fix consigne action dropdown clipping

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       flex-direction:column;
       width:100%;
       box-sizing:border-box;
-      overflow:hidden;
+      overflow:visible;
     }
     .daily-category::before {
       content:"";
