Add top-level Historique navigation tab

--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
     [data-section="practice"]{
       --accent-50:#F1FBF4; --accent-200:#D8F3E0; --accent-400:#BEE6C8; --accent-600:#8ED6A2; --accent-700:#63C582;
     }
+    /* Historique = bleu profond */
+    [data-section="history"]{
+      --accent-50:#ECF3FF; --accent-200:#C9DCFF; --accent-400:#93B8FF; --accent-600:#4A83FF; --accent-700:#2F5FE0;
+    }
     /* Objectifs = violet doux */
     [data-section="goals"]{
       --accent-50:#F7F3FF; --accent-200:#E9DFFF; --accent-400:#E3D0FF; --accent-600:#C7A7FF; --accent-700:#A884FF;
@@ -1743,6 +1747,7 @@
             <button class="tab" data-route="#/admin" data-nav="admin"><span>🛠️</span><span>Admin</span></button>
             <button class="tab" data-route="#/daily"><span>📅</span><span>Journalier</span></button>
             <button class="tab" data-route="#/practice"><span>⚡</span><span>Pratique</span></button>
+            <button class="tab" data-route="#/history"><span>🕑</span><span>Historique</span></button>
             <button class="tab" data-route="#/goals"><span>🎯</span><span>Objectifs</span></button>
           </nav>
           <div class="user-actions hidden absolute right-4 top-4 sm:static" id="user-actions" aria-hidden="true">
